--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,16 @@
 sonar.projectKey=qdbrowserstack_sonar-weekly-simulation
 sonar.organization=qdbrowserstack
 
+# (Optional, helps readability in SonarCloud UI)
+sonar.projectName=sonar-weekly-simulation
+sonar.projectVersion=1.0
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=sonar-weekly-simulation
-#sonar.projectVersion=1.0
+# Tell Sonar where your code and tests are
+sonar.sources=src
+sonar.tests=.
 
-
-# Path is relative to the sonar-project.properties file. Replace "\\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
+# Encoding
 sonar.sourceEncoding=UTF-8
+
+# Coverage report path (from Jest)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
