--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -40,18 +40,15 @@ jobs:
           git commit -m "chore: weekly simulation run $(date --utc +%Y-%m-%dT%H:%M:%SZ)" || echo "no changes to commit"
           git push
 
-      - name: Optional: run SonarQube analysis
+      - name: Run SonarQube analysis
         if: ${{ secrets.SONAR_TOKEN != '' && secrets.SONAR_HOST_URL != '' }}
         env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           echo "SONAR_TOKEN present — running sonar-scanner"
-          # Use npx so we don't need to preinstall the scanner globally.
-          # sonar-project.properties in the repo provides projectKey/organization;
-          # we explicitly point the scanner at the Jest LCOV report that Jest produces.
           npx -y sonar-scanner@4.3.0 \
             -Dsonar.host.url="$SONAR_HOST_URL" \
             -Dsonar.login="$SONAR_TOKEN" \
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-            -Dsonar.sourceEncoding=UTF-8
+            -Dsonar.sourceEncoding=UTF-8 || echo "sonar-scanner failed (exit ignored)"
