--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -37,7 +37,7 @@ jobs:
           echo "Run at $(date --utc +%Y-%m-%dT%H:%M:%SZ)" >> generated/weekly.txt
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add generated/weekly.txt
+          git add -f generated/weekly.txt
           git commit -m "chore: weekly simulation run $(date --utc +%Y-%m-%dT%H:%M:%SZ)" || echo "no changes to commit"
           git push
 
