--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * 0' # Every Sunday at 00:00 UTC
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   run-tests-and-commit:
     runs-on: ubuntu-latest
