--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -30,22 +30,11 @@ jobs:
 
       - name: Run tests and generate coverage
         run: |
-          echo "🧪 Running tests and generating coverage..."
+          echo "🧪 Running tests..."
           npm test --silent || echo "⚠️ Tests completed with non-zero exit code"
-          echo "✅ Test run completed."
+          echo "✅ Test run finished."
         env:
           CI: true
-
-      - name: Verify coverage file
-        run: |
-          if [ -f coverage/lcov.info ]; then
-            echo "✅ Coverage file found at coverage/lcov.info"
-            head -n 5 coverage/lcov.info
-          else
-            echo "⚠️ Coverage file not found. Generating empty one to avoid Sonar errors."
-            mkdir -p coverage
-            echo "TN:" > coverage/lcov.info
-          fi
 
       - name: Commit timestamp (simulate weekly activity)
         run: |
@@ -57,20 +46,20 @@ jobs:
           git commit -m "chore: weekly simulation run $(date --utc +%Y-%m-%dT%H:%M:%SZ)" || echo "ℹ️ No changes to commit"
           git push
 
-      - name: Run SonarQube Cloud analysis
+      - name: Run SonarQube analysis
         env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           if [ -z "$SONAR_TOKEN" ] || [ -z "$SONAR_HOST_URL" ]; then
-            echo "⚠️ Skipping SonarQube analysis — SONAR_TOKEN or SONAR_HOST_URL not set."
+            echo "⚠️  Skipping SonarQube analysis — SONAR_TOKEN or SONAR_HOST_URL not set."
             exit 0
           fi
 
           echo "🚀 Installing sonarqube-scanner..."
           npm install -g sonarqube-scanner
 
-          echo "🚀 Running SonarQube analysis on SonarCloud..."
+          echo "✅ Running SonarQube analysis..."
           sonar-scanner \
             -Dsonar.projectKey=qdbrowserstack_sonar-weekly-simulation \
             -Dsonar.organization=qdbrowserstack \
@@ -79,7 +68,6 @@ jobs:
             -Dsonar.sources=. \
             -Dsonar.exclusions=node_modules/**,coverage/**,generated/** \
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-            -Dsonar.sourceEncoding=UTF-8 \
-            -Dsonar.qualitygate.wait=true || echo "⚠️ SonarQube analysis failed (ignored)"
+            -Dsonar.sourceEncoding=UTF-8 || echo "⚠️  SonarQube analysis failed (exit ignored)"
 
-          echo "✅ SonarQube scan completed."
+          echo "✅ SonarQube scan finished."
