--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -66,7 +66,7 @@ jobs:
             -Dsonar.host.url="$SONAR_HOST_URL" \
             -Dsonar.login="$SONAR_TOKEN" \
             -Dsonar.sources=. \
-            -Dsonar.exclusions=node_modules/**,coverage/**,generated/** \
+            -Dsonar.exclusions=node_modules/**,coverage/**,generated/**,.github/**,**/*.spec.js,**/*.test.js \
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
             -Dsonar.sourceEncoding=UTF-8 || echo "⚠️  SonarQube analysis failed (exit ignored)"
 
